# DomainDiscoveryEngine

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  next_task.md  pyproject.toml
design/: README.md  architecture.md  runtime.md
design/docs/: architecture.md  codex_execution_guide.md  codex_prompt_examples.md  file_structure.md  implementation_plan.md  testing_strategy.md  workflow.md
design/docs/modules/: dialogue_analyzer.md  domain_model_builder.md  memory_updater.md  question_generator.md  response_composer.md  simulation_tester.md
design/docs/prompts/: prompt_guidelines.md
design/docs/schemas/: domain_model.md  project_memory.md
design/docs/tasks/: README.md  TASK_01_project_scaffold.md  TASK_02_schemas_memory.md  TASK_03_domain_model_schema.md  TASK_04_memory_store.md  TASK_05_memory_updater.md  TASK_06_extraction_schema_and_analyzer_stub.md  (+4 more)
docs/: business_capability_model.md  project_direction.md  prompt_language_policy.md
src/domain_discovery_engine/: __init__.py  main.py
tests/: test_business_capability_builder.py  test_business_capability_schema.py  test_capability_flow.py  test_cli_output.py  test_config.py  test_dialogue_analyzer.py  test_documentation_policy.py  test_domain_model_builder.py  test_domain_model_schema.py  test_json_store.py  test_llm_agents.py  test_memory_metadata_compat.py  test_memory_schema.py  test_memory_updater.py  test_prompt_language_policy.py  test_question_generator.py  test_simulation_tester.py  test_workflow.py  test_workflow_mode_selection.py  test_workflow_smoke.py
(+42 files in other folders)
